fix: fix the article wrap problem

--- a/src/components/news-display/index.module.scss
+++ b/src/components/news-display/index.module.scss
@@ -55,6 +55,7 @@
         text-align: justify;
         //word-break: break-all;
         color: rgb(34, 34, 34);
+        white-space: pre-line;
         //letter-spacing: 0.3px;
     }
     .footer {
